--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -9,7 +9,9 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
+    - name: test generator
+      run: cd test; make gen
     - name: test
       run: cd test; make test
-    - name: make cli
+    - name: command line interface
       run: cd cli; make
