--- a/cli/Makefile
+++ b/cli/Makefile
@@ -19,7 +19,7 @@ CPPFLAGS=-MMD
 
 OBJS_common   = file_util.o bin_formatter.o intel_hex.o moto_srec.o
 OBJS_asm      = asm_base.o asm_operand.o
-OBJS_dis      = dis_operand.o
+OBJS_dis      = dis_base.o dis_operand.o
 OBJS_mc6809   = table_mc6809.o  reg_mc6809.o  $(OBJS_common)
 OBJS_mc6800   = table_mc6800.o  reg_mc6800.o  $(OBJS_common)
 OBJS_m6502    = table_m6502.o   reg_m6502.o   $(OBJS_common)
