--- a/test/Makefile
+++ b/test/Makefile
@@ -116,8 +116,8 @@ TEST_OBJS= \
 TESTS=$(TEST_OBJS:.o=)
 
 OBJS_asm = asm_base.o asm_operand.o test_asserter.o
-OBJS_dis = dis_operand.o test_asserter.o test_memory.o
-OBJS_gen = dis_operand.o test_memory.o text_buffer.o
+OBJS_dis = dis_base.o dis_operand.o test_asserter.o test_memory.o
+OBJS_gen = dis_base.o dis_operand.o test_memory.o text_buffer.o
 OBJS_mc6809  = table_mc6809.o  reg_mc6809.o
 OBJS_mc6800  = table_mc6800.o  reg_mc6800.o
 OBJS_m6502   = table_m6502.o   reg_m6502.o
