--- a/cli/Makefile
+++ b/cli/Makefile
@@ -18,8 +18,8 @@ CXXFLAGS=-Wall -g -O -std=c++17 -I../src
 CPPFLAGS=-MMD
 
 OBJS_common   = file_util.o bin_formatter.o intel_hex.o moto_srec.o
-OBJS_asm      = asm_base.o asm_operand.o asm_driver.o asm_directive.o cli_listing.o
-OBJS_dis      = dis_base.o dis_operand.o dis_driver.o cli_listing.o
+OBJS_asm      = asm_base.o asm_operand.o asm_driver.o asm_directive.o cli_listing.o cli_memory.o
+OBJS_dis      = dis_base.o dis_operand.o dis_driver.o dis_directive.o cli_listing.o cli_memory.o
 OBJS_mc6809   = table_mc6809.o  reg_mc6809.o  $(OBJS_common)
 OBJS_mc6800   = table_mc6800.o  reg_mc6800.o  $(OBJS_common)
 OBJS_m6502    = table_m6502.o   reg_m6502.o   $(OBJS_common)
