[6801] Support MC6801 disassembler

--- a/test/Makefile
+++ b/test/Makefile
@@ -179,6 +179,7 @@ gen_mc6809:  gen_mc6809.o  dis_mc6809.o  $(OBJS_mc6809)  $(OBJS_gen)
 gen_mc6800:  gen_mc6800.o  dis_mc6800.o  $(OBJS_mc6800)  $(OBJS_gen)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 	./gen_mc6800 -u -C 6800  -o gen_mc6800.asm
+	./gen_mc6800 -u -C 6801  -o gen_mc6801.asm
 gen_m6502:   gen_m6502.o   dis_m6502.o   $(OBJS_m6502)   $(OBJS_gen)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 	./gen_m6502 -u -C 6502    -o gen_m6502.asm
