[6801] Support MC6801 assembler

--- a/test/Makefile
+++ b/test/Makefile
@@ -21,6 +21,7 @@ all: \
 	test_mc6809.s19 \
 	test_hd6309.s19 \
 	test_mc6800.s19 \
+	test_mc6801.s19 \
 	test_m6502.s19 \
 	test_w65sc02.s19 \
 	test_r65c02.s19 \
