--- a/cli/Makefile
+++ b/cli/Makefile
@@ -27,20 +27,6 @@ OBJS_i8080    = table_i8080.o   reg_i8080.o   $(OBJS_common)
 OBJS_z80      = table_z80.o     reg_z80.o     $(OBJS_common)
 OBJS_tms9900  = table_tms9900.o reg_tms9900.o $(OBJS_common)
 OBJS_mc68000  = table_mc68000.o reg_mc68000.o $(OBJS_common)
-OBJS_asm6809  = asm6809.o  asm_mc6809.o  $(OBJS_asm) $(OBJS_mc6809)  $(OBJS_common)
-OBJS_asm6800  = asm6800.o  asm_mc6800.o  $(OBJS_asm) $(OBJS_mc6800)  $(OBJS_common)
-OBJS_asm6502  = asm6502.o  asm_mos6502.o $(OBJS_asm) $(OBJS_mos6502) $(OBJS_common)
-OBJS_asm8080  = asm8080.o  asm_i8080.o   $(OBJS_asm) $(OBJS_i8080)   $(OBJS_common)
-OBJS_asmz80   = asmz80.o   asm_z80.o     $(OBJS_asm) $(OBJS_z80)     $(OBJS_common)
-OBJS_asm9900  = asm9900.o  asm_tms9900.o $(OBJS_asm) $(OBJS_tms9900) $(OBJS_common)
-OBJS_asm68000 = asm68000.o asm_mc68000.o $(OBJS_asm) $(OBJS_mc68000) $(OBJS_common)
-OBJS_dis6809  = dis6809.o  dis_mc6809.o  $(OBJS_dis) $(OBJS_mc6809)  $(OBJS_common)
-OBJS_dis6800  = dis6800.o  dis_mc6800.o  $(OBJS_dis) $(OBJS_mc6800)  $(OBJS_common)
-OBJS_dis6502  = dis6502.o  dis_mos6502.o $(OBJS_dis) $(OBJS_mos6502) $(OBJS_common)
-OBJS_dis8080  = dis8080.o  dis_i8080.o   $(OBJS_dis) $(OBJS_i8080)   $(OBJS_common)
-OBJS_disz80   = disz80.o   dis_z80.o     $(OBJS_dis) $(OBJS_z80)     $(OBJS_common)
-OBJS_dis9900  = dis9900.o  dis_tms9900.o $(OBJS_dis) $(OBJS_tms9900) $(OBJS_common)
-OBJS_dis68000 = dis68000.o dis_mc68000.o $(OBJS_dis) $(OBJS_mc68000) $(OBJS_common)
 
 OBJS = \
 	$(OBJS_asm6809)  $(OBJS_dis6809)  \
@@ -51,23 +37,7 @@ OBJS = \
 	$(OBJS_asm9900)  $(OBJS_dis9900)  \
 	$(OBJS_asm68000) $(OBJS_dis68000)
 
-OBJS_driver = \
-	asm6809.o  \
-	asm6800.o  \
-	asm6502.o  \
-	asm8080.o  \
-	asmz80.o   \
-	asm9900.o  \
-	asm68000.o \
-	dis6809.o  \
-	dis6800.o  \
-	dis6502.o  \
-	dis8080.o  \
-	disz80.o   \
-	dis9900.o  \
-	dis68000.o \
-	asm.o      \
-	dis.o
+OBJS_driver = asm.o dis.o
 
 DRIVERS = $(OBJS_driver:.o=)
 
@@ -77,34 +47,6 @@ all: $(OBJS_driver:.o=)
 
 -include $(OBJS:.o=.d)
 
-asm6809:  $(OBJS_asm6809)
-	$(CXX) $(CXXFLAGS) $^ -o $@
-asm6800:  $(OBJS_asm6800)
-	$(CXX) $(CXXFLAGS) $^ -o $@
-asm6502:  $(OBJS_asm6502)
-	$(CXX) $(CXXFLAGS) $^ -o $@
-asm8080:  $(OBJS_asm8080)
-	$(CXX) $(CXXFLAGS) $^ -o $@
-asmz80:   $(OBJS_asmz80)
-	$(CXX) $(CXXFLAGS) $^ -o $@
-asm9900:  $(OBJS_asm9900)
-	$(CXX) $(CXXFLAGS) $^ -o $@
-asm68000: $(OBJS_asm68000)
-	$(CXX) $(CXXFLAGS) $^ -o $@
-dis6809:  $(OBJS_dis6809)
-	$(CXX) $(CXXFLAGS) $^ -o $@
-dis6800:  $(OBJS_dis6800)
-	$(CXX) $(CXXFLAGS) $^ -o $@
-dis6502:  $(OBJS_dis6502)
-	$(CXX) $(CXXFLAGS) $^ -o $@
-dis8080:  $(OBJS_dis8080)
-	$(CXX) $(CXXFLAGS) $^ -o $@
-disz80:   $(OBJS_disz80)
-	$(CXX) $(CXXFLAGS) $^ -o $@
-dis9900:  $(OBJS_dis9900)
-	$(CXX) $(CXXFLAGS) $^ -o $@
-dis68000: $(OBJS_dis68000)
-	$(CXX) $(CXXFLAGS) $^ -o $@
 asm:    asm.o $(OBJS_asm) $(OBJS_common) \
 	asm_mc6809.o  $(OBJS_mc6809)  \
 	asm_mc6800.o  $(OBJS_mc6800)  \
