--- a/cli/Makefile
+++ b/cli/Makefile
@@ -17,7 +17,8 @@ VPATH=../src
 CXXFLAGS=-Wall -g -O -std=c++17 -I../src
 CPPFLAGS=-MMD
 
-OBJS_common   = file_util.o bin_formatter.o intel_hex.o moto_srec.o cli_listing.o cli_memory.o
+OBJS_common   = file_util.o bin_formatter.o intel_hex.o moto_srec.o \
+		cli_listing.o cli_memory.o error_reporter.o
 OBJS_asm      = asm_base.o value_parser.o asm_driver.o asm_directive.o
 OBJS_dis      = dis_base.o value_formatter.o dis_driver.o dis_directive.o
 OBJS_mc6809   = table_mc6809.o  reg_mc6809.o
