--- a/test/Makefile
+++ b/test/Makefile
@@ -93,7 +93,8 @@ test_tms9900:test_asm_tms9900 test_dis_tms9900
 test_z80: test_asm_z80 test_dis_z80
 	./test_asm_z80
 	./test_dis_z80
-test_ins8060: test_dis_ins8060
+test_ins8060: test_asm_ins8060 test_dis_ins8060
+	./test_asm_ins8060
 	./test_dis_ins8060
 test_mc68000: test_asm_mc68000 test_dis_mc68000
 	./test_asm_mc68000
@@ -121,7 +122,7 @@ TEST_OBJS= \
 	test_asm_w65c816.o test_dis_w65c816.o \
 	test_asm_i8080.o   test_dis_i8080.o   \
 	test_asm_z80.o     test_dis_z80.o     \
-	                   test_dis_ins8060.o \
+	test_asm_ins8060.o test_dis_ins8060.o \
 	test_asm_tms9900.o test_dis_tms9900.o \
 	test_asm_mc68000.o test_dis_mc68000.o \
 	test_expr_moto.o   test_expr_intel.o  \
@@ -155,7 +156,7 @@ OBJS	 = \
 	$(OBJS_w65c816) asm_w65c816.o dis_w65c816.o \
 	$(OBJS_i8080)   asm_i8080.o   dis_i8080.o   \
 	$(OBJS_Z80)     asm_z80.o     dis_z80.o     \
-	$(OBJS_ins8060)               dis_ins8060.o \
+	$(OBJS_ins8060) asm_ins8060.o dis_ins8060.o \
 	$(OBJS_tms9900) asm_tms9900.o dis_tms9900.o \
 	$(OBJS_mc68000) asm_mc68000.o dis_mc68000.o
 
@@ -184,6 +185,8 @@ test_dis_i8080:   test_dis_i8080.o   dis_i8080.o   $(OBJS_i8080)   $(OBJS_dis)
 test_asm_z80:     test_asm_z80.o     asm_z80.o     $(OBJS_z80)     $(OBJS_asm)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_dis_z80:     test_dis_z80.o     dis_z80.o     $(OBJS_z80)     $(OBJS_dis)
+	$(CXX) -o $@ $(CXXFLAGS) $^
+test_asm_ins8060: test_asm_ins8060.o asm_ins8060.o $(OBJS_ins8060) $(OBJS_asm)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_dis_ins8060: test_dis_ins8060.o dis_ins8060.o $(OBJS_ins8060) $(OBJS_dis)
 	$(CXX) -o $@ $(CXXFLAGS) $^
