--- a/test/Makefile
+++ b/test/Makefile
@@ -34,6 +34,7 @@ all: \
 	test_i8085_z80syn.hex \
 	test_z80.hex \
 	test_ins8060.hex \
+	test_ins8070.hex \
 	test_tms9900.hex \
 	test_tms9995.hex \
 	test_mc68000.s28
@@ -59,6 +60,7 @@ all: \
 	test_i8080   \
 	test_z80     \
 	test_ins8060 \
+	test_ins8070 \
 	test_tms9900 \
 	test_mc68000 \
 	test_expr
@@ -70,6 +72,7 @@ test:   test_mc6809  \
 	test_i8080   \
 	test_z80     \
 	test_ins8060 \
+	test_ins8070 \
 	test_tms9900 \
 	test_mc68000 \
 	test_expr
@@ -98,6 +101,8 @@ test_z80: test_asm_z80 test_dis_z80
 test_ins8060: test_asm_ins8060 test_dis_ins8060
 	./test_asm_ins8060
 	./test_dis_ins8060
+test_ins8070: test_dis_ins8070
+	./test_dis_ins8070
 test_mc68000: test_asm_mc68000 test_dis_mc68000
 	./test_asm_mc68000
 	./test_dis_mc68000
@@ -125,6 +130,7 @@ TEST_OBJS= \
 	test_asm_i8080.o   test_dis_i8080.o   \
 	test_asm_z80.o     test_dis_z80.o     \
 	test_asm_ins8060.o test_dis_ins8060.o \
+	                   test_dis_ins8070.o \
 	test_asm_tms9900.o test_dis_tms9900.o \
 	test_asm_mc68000.o test_dis_mc68000.o \
 	test_expr_moto.o   test_expr_intel.o  \
@@ -134,7 +140,8 @@ TEST_OBJS= \
 	gen_mos6502.o \
 	gen_i8080.o   \
 	gen_z80.o     \
-	gen_ins8060.o
+	gen_ins8060.o \
+	gen_ins8070.o
 
 TESTS=$(TEST_OBJS:.o=)
 
@@ -148,6 +155,7 @@ OBJS_w65c816 = table_w65c816.o reg_mos6502.o table_mos6502.o
 OBJS_i8080   = table_i8080.o   reg_i8080.o
 OBJS_z80     = table_z80.o     reg_z80.o
 OBJS_ins8060 = table_ins8060.o reg_ins8060.o
+OBJS_ins8070 = table_ins8070.o reg_ins8070.o
 OBJS_tms9900 = table_tms9900.o reg_tms9900.o
 OBJS_mc68000 = table_mc68000.o reg_mc68000.o
 OBJS	 = \
@@ -159,6 +167,7 @@ OBJS	 = \
 	$(OBJS_i8080)   asm_i8080.o   dis_i8080.o   \
 	$(OBJS_Z80)     asm_z80.o     dis_z80.o     \
 	$(OBJS_ins8060) asm_ins8060.o dis_ins8060.o \
+	$(OBJS_ins8070)               dis_ins8070.o \
 	$(OBJS_tms9900) asm_tms9900.o dis_tms9900.o \
 	$(OBJS_mc68000) asm_mc68000.o dis_mc68000.o
 
@@ -191,6 +200,8 @@ test_dis_z80:     test_dis_z80.o     dis_z80.o     $(OBJS_z80)     $(OBJS_dis)
 test_asm_ins8060: test_asm_ins8060.o asm_ins8060.o $(OBJS_ins8060) $(OBJS_asm)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_dis_ins8060: test_dis_ins8060.o dis_ins8060.o $(OBJS_ins8060) $(OBJS_dis)
+	$(CXX) -o $@ $(CXXFLAGS) $^
+test_dis_ins8070: test_dis_ins8070.o dis_ins8070.o $(OBJS_ins8070) $(OBJS_dis)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_asm_tms9900: test_asm_tms9900.o asm_tms9900.o $(OBJS_tms9900) $(OBJS_asm)
 	$(CXX) -o $@ $(CXXFLAGS) $^
@@ -234,6 +245,9 @@ gen_z80:     gen_z80.o     dis_z80.o     $(OBJS_z80)     $(OBJS_gen)
 gen_ins8060: gen_ins8060.o dis_ins8060.o $(OBJS_ins8060) $(OBJS_gen)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 	./gen_ins8060 -u -C ins8060 -o gen_ins8060.asm
+gen_ins8070: gen_ins8070.o dis_ins8070.o $(OBJS_ins8070) $(OBJS_gen)
+	$(CXX) -o $@ $(CXXFLAGS) $^
+	./gen_ins8070 -u -C ins8070 -o gen_ins8070.asm
 
 clean: clean-obj
 	-rm -f $(TESTS)
