--- a/cli/Makefile
+++ b/cli/Makefile
@@ -62,6 +62,7 @@ asm:    asm.o $(OBJS_asm) $(OBJS_common) \
 	asm_i8080.o   $(OBJS_i8080)   \
 	asm_z80.o     $(OBJS_z80)     \
 	asm_ins8060.o $(OBJS_ins8060) \
+	asm_ins8070.o $(OBJS_ins8070) \
 	asm_tms9900.o $(OBJS_tms9900) \
 	asm_mc68000.o $(OBJS_mc68000)
 	$(CXX) $(CXXFLAGS) $^ -o $@
